@@ -1,5 +1,5 @@
 package: pandorafms-console
-Version: 4.0
+Version: 4.0RC1
 Architecture: all
 Priority: optional
 Section: admin
